--- a/public/styles/cards.css
+++ b/public/styles/cards.css
@@ -1,6 +1,6 @@
 .card {
 	border: 1px solid #e2e2e2;
-	border-radius: 6px;
+	width: 400px;
 }
 
 a.card {
@@ -30,7 +30,7 @@ a.card {
 
 .card.shadow {
 	border: none;
-	box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+	/* box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1); */
 }
 
 .card.link {
@@ -43,7 +43,7 @@ a.card {
 
 .card .image {
 	border-radius: 6px 6px 0 0;
-	height: 160px;
+	height: 300px;
 	background-size: cover;
 	background-position: center;
 	position: relative;
@@ -87,9 +87,11 @@ a.card {
 	margin-left: 0;
 }
 
+/* space.title */
 .card .content h2 {
-	font-size: 18px;
+	font-size: 30px;
 	margin-top: 5px;
+	font-family: 'Abril Fatface';
 	margin-bottom: 5px;
 }
 
@@ -117,7 +119,8 @@ a.card {
 
 .card .location {
 	display: block;
-	font-size: 11px;
+	font-size: 15px;
+	text-transform: uppercase;
 	margin-top: 10px;
 }
 
