--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -2,19 +2,22 @@ button,
 .button {
 	background: white;
 	box-sizing: border-box;
-	border-radius: 4px;
-	border: 1px solid #e2e2e2;
-	font-size: 16px;
+	border-radius: 2px;
+	border: 1px solid #e0b4b2;
+	font-size: 14px;
+	font-family: 'Open Sans';
 	height: 50px;
-	padding: 14px 20px;
+	padding: 14px 30px;
+	margin: 8px;
 	cursor: pointer;
-	color: black;
+	color: #d5aba9;
 	transition: background-color 0.3s, border 0.3s, color 0.3s;
 }
 
 button:hover,
 .button:hover {
-	background: #f5f5f5;
+	background-color: #e0b1af;
+	color: white;
 }
 
 button.primary,
