--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,6 +13,10 @@
 	background-attachment: fixed;
 }
 
+.hero .button {
+	color: #dba3a0;
+}
+
 .logo {
 	background-image: url('https://i.ibb.co/kyHGqYL/Curate.jpg');
 }
