--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,10 +12,10 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
-
+/* 
 .hero .button {
 	color: #dba3a0;
-}
+} */
 
 .logo {
 	background-image: url('https://i.ibb.co/kyHGqYL/Curate.jpg');
