--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -2,29 +2,25 @@ button,
 .button {
 	background: white;
 	box-sizing: border-box;
-	border-radius: 2px;
-	border: 1px solid #dba3a0;
-	font-size: 14px;
-	font-family: 'Open Sans';
+	border-radius: 4px;
+	border: 1px solid #e2e2e2;
+	font-size: 16px;
 	height: 50px;
-	padding: 14px 30px;
-	margin: 8px;
-
+	padding: 14px 20px;
+	font-family: 'Montserrat';
 	cursor: pointer;
-	color: #d5aba9;
+	color: white;
 	transition: background-color 0.3s, border 0.3s, color 0.3s;
 }
 
 button:hover,
 .button:hover {
-	background-color: #dba3a0;
-	color: white;
+	background: #fff;
 }
 
 button.primary,
 .button.primary {
-	background: #dba3a0;
-	color: white;
+	background: tomato;
 	padding: 14px 20px;
 	font-size: 16px;
 	border-radius: 4px;
@@ -36,16 +32,17 @@ button.primary,
 }
 
 button.secondary {
-	background: #ff5a5f;
-	color: white;
+	background: #f16d56;
 	padding: 14px 20px;
-	font-size: 16px;
+	font-size: 12px;
 	border: none;
-	border-radius: 4px;
+	border-radius: 8px;
+	margin-top: 20px;
+	margin-left: 40px;
 }
 
 button.secondary:hover {
-	background: #de484d;
+	background: #fff;
 }
 
 button.small {
