--- a/public/styles/cards.css
+++ b/public/styles/cards.css
@@ -72,6 +72,7 @@ a.card {
 }
 
 .card p.footer {
+	margin-top: 200px;
 	margin-bottom: 0;
 	font-size: 15px;
 }
@@ -159,6 +160,7 @@ a.card {
 	margin-top: 40px;
 }
 
+/* modal end  */
 .card h3 {
 	margin-top: 0;
 	font-size: 30px;
