--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,14 +1,14 @@
-form input {
-	width: 100%;
+/* form input {
+	width: 20%;
 	height: 50px;
 	font-size: 16px;
 	padding: 10px 15px;
 	box-sizing: border-box;
 	border-radius: 4px;
-	border: 1px solid #e2e2e2;
+	border: 1px solid tomato;
 }
 
-form input[type=file] {
+form input[type='file'] {
 	padding: 13px;
 }
 
@@ -21,18 +21,19 @@ form label {
 form .group + .group {
 	margin-top: 30px;
 }
-
+/*
 form .group + button {
 	margin-top: 30px;
-}
-
+} */
+/*
 form textarea {
-	width: 100%;
+	width: 10%;
 	border-radius: 4px;
 	font-size: 16px;
 	padding: 10px 15px;
 	box-sizing: border-box;
 	height: 100px;
+	color: #fff;
 }
 
 select {
@@ -79,11 +80,4 @@ form .rating {
 	cursor: pointer;
 	font-size: 14px;
 	margin: 10px 0;
-}
-
-/* React Date Picker */
-
-.react-datepicker-wrapper,
-.react-datepicker__input-container {
-	width: 100%;
 }
