--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,11 +1,45 @@
-nav {
+nav.bg-light {
+	background-color: black !important;
+}
+
+nav a {
+	color: white;
+}
+
+nav a:hover {
+	color: #f2f2f2;
+}
+
+nav a:hover {
+	animation: ani9 0.4s ease-in-out infinite alternate;
+}
+@keyframes ani9 {
+	0% {
+		transform: translateY(3px);
+	}
+	100% {
+		transform: translateY(5px);
+	}
+}
+
+/* nav {
 	padding: 10px 50px;
 	display: grid;
 	grid-template-columns: 60px auto;
 	grid-column-gap: 10px;
 	border-bottom: 1px solid #e2e2e2;
+	overflow: hidden;
 }
 
+nav .a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
 nav .logo {
 	width: 100%;
 	height: 30px;
@@ -42,4 +76,4 @@ nav .profile .avatar {
 
 nav .profile a span {
 	vertical-align: middle;
-}
+} */
