--- a/public/styles/grid.css
+++ b/public/styles/grid.css
@@ -36,6 +36,9 @@
 	height: 100vh;
 	width: 50vw;
 	background-image: linear-gradient(-225deg, #f2c57c 50%, #f9a03f 50%);
+	border-radius: 0px;
+	margin-top: 0;
+	/* this is an imperfect temporary fix and needs work */
 }
 
 /* end signup */
@@ -56,8 +59,14 @@
 	grid-row-gap: 30px;
 }
 
-.grid.five {
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+.grid .five {
+	grid-template-columns: auto auto auto auto auto;
+	grid-column-gap: 5px;
+	grid-row-gap: 5px;
+}
+.grid.small {
+	padding: 20px;
+	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
 }
