--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -16,25 +16,12 @@ form label {
 	display: block;
 	margin-bottom: 8px;
 	color: #8a8a8a;
-}
+}*/
 
-form .group + .group {
-	margin-top: 30px;
+FormGroup {
+	margin-left:200px;
 }
 /*
-form .group + button {
-	margin-top: 30px;
-} */
-/*
-form textarea {
-	width: 10%;
-	border-radius: 4px;
-	font-size: 16px;
-	padding: 10px 15px;
-	box-sizing: border-box;
-	height: 100px;
-	color: #fff;
-}
 
 select {
 	width: 100%;
