--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -24,7 +24,7 @@ a.primary,
 	background: #f9a03f;
 	font-family: 'Open Sans';
 	text-transform: capitalize;
-	padding: 5px;
+	padding: 2px;
 	font-size: 14px;
 	border-radius: 8px;
 	border: none;
@@ -32,7 +32,6 @@ a.primary,
 	text-decoration: none;
 	box-sizing: border-box;
 	vertical-align: top;
-	width: 135px;
 	color: white;
 	-webkit-appearance: button;
 	/* margin-left: 25px; */
@@ -59,7 +58,7 @@ a.primary:hover {
 	transform: translatey(3px);
 	box-shadow: none;
 	opacity: 80%;
-	color: #333;
+	color: #fff;
 }
 
 .primary + .primary {
