--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -1,5 +1,16 @@
 .sidebar {
-	margin-top: 50px;
+	/* margin-top: 50px; */
+	border: 1px solid #e2e2e2;
+	/* width: 100%; */
+	/* display: flex; */
+	justify-content: center;
+	/* align-items: center; */
+	padding: 24px;
+	border-radius: 5px;
+	/* position: sticky; */
+	/* border-radius: 8px; */
+	margin: -30px;
+	padding: 82px;
 }
 
 .sidebar ul {
@@ -25,11 +36,11 @@
 
 .sidebar ul li.active a {
 	background: #00988f;
-	color: white;
+	color: black;
 }
 
 /* ////slider */
-/* 
+/*
 input[type='radio'] {
 	display: none;
 }
