--- a/public/styles/users.css
+++ b/public/styles/users.css
@@ -8,12 +8,14 @@
 }
 
 .user .avatar {
-	width: 50px;
-	height: 50px;
+	width: 200px;
+	height: 200px;
 	border-radius: 50%;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	margin-left: 10px;
+	margin-bottom: 10px;
 }
 
 .user small {
@@ -29,4 +31,10 @@ small + .user {
 
 .user + .card {
 	margin-top: 30px;
+}
+
+.user > .name {
+	text-align: right;
+	padding-left: 200px;
+	padding-right: 25px;
 }
