--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -3,14 +3,20 @@ button,
 	background: white;
 	box-sizing: border-box;
 	border-radius: 4px;
-	border: 1px solid #e2e2e2;
+	border: 2px solid #f9a03f;
 	font-size: 16px;
 	height: 50px;
+	width: 30px;
 	padding: 14px 20px;
-	font-family: 'Montserrat';
+	font-family: 'Lato';
 	cursor: pointer;
-	color: white;
+	color: #ffffff;
 	transition: background-color 0.3s, border 0.3s, color 0.3s;
+}
+
+button:hover,
+.button:hover {
+	background-color: #f9a03f;
 }
 
 button.primary:hover,
