--- a/public/styles/cards.css
+++ b/public/styles/cards.css
@@ -6,6 +6,29 @@
 	align-items: center;
 }
 
+.smallish {
+	border: 1px solid #e2e2e2;
+	box-sizing: border-box;
+	justify-content: center;
+	align-items: center;
+	display: inline-block;
+	height: auto;
+	border-radius: 25px;
+	font-size: 14px;
+	font-family: 'Open Sans';
+	color: '#e2e2e2';
+	text-transform: capitalize;
+
+	/* margin-right: 10px;
+	margin-bottom: 10px; */
+	padding: 3px 25px 4px;
+	/* border-style: solid;
+	border-width: 0.5px;
+	border-color: rgba(34, 34, 34, 0.2);
+	border-radius: 25px;
+	background-color: rgba(236, 244, 247, 0); */
+}
+
 .card .create {
 	width: 800px;
 }
