--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,14 +1,16 @@
-/* form input {
-	width: 20%;
-	height: 50px;
+.group input {
+	width: 140%;
+	height: 100%;
 	font-size: 16px;
-	padding: 10px 15px;
+	padding: 16px 15px;
+	margin:15px;
 	box-sizing: border-box;
-	border-radius: 4px;
-	border: 1px solid tomato;
+	border-radius: 20px;
+	border: 1px solid #e2e2e2;
+
 }
 
-form input[type='file'] {
+/* form input[type='file'] {
 	padding: 13px;
 }
 
@@ -16,7 +18,7 @@ form label {
 	display: block;
 	margin-bottom: 8px;
 	color: #8a8a8a;
-}*/
+} */
 
 FormGroup {
 	margin-left:200px;
