fixed hotmess sidebar

--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -9,8 +9,8 @@
 	border-radius: 5px;
 	/* position: sticky; */
 	/* border-radius: 8px; */
-	margin: -30px;
-	padding: 82px;
+	margin: 15px -7px 0px -48px;
+	padding: 15px 30px 40px 25px;
 }
 
 .sidebar ul {
