--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -15,6 +15,21 @@
 	position: relative;
 }
 
+.msg {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: white;
+	background-image: url('https://i.ibb.co/xhndGQC/filios-sazeides-6qbtnk-Grf-U-unsplash.jpg');
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	position: relative;
+}
 /* //search */
 
 input.ctnr-search {
